--- a/page.html
+++ b/page.html
@@ -4,6 +4,6 @@
         <title>html></title>
     </head>
     <body>
-        <h1 style="color: blue;">Welcome to html page!!</h1>
+        <h1>Welcome to html page!!</h1>
     </body>
 </html>
