--- a/page.html
+++ b/page.html
@@ -2,6 +2,11 @@
 <html lang="eng">
     <head>
         <title>html></title>
+        <style>
+            h1{
+                color: red;
+            }
+        </style>
     </head>
     <body>
         <h1>Welcome to html page!!</h1>
